--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,24 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#F8EE99</color>
-    <color name="colorAccent">#CEC5C8</color>
-    <color name="White">#fff</color>
-    <color name="BackgroundColor">#DEE0B7</color>
-    <color name="HeaderBackground">#ED26AFF0</color>
-    <color name="ProductColor">#0CA4EB</color>
-    <color name="CommentColor">#86C5E2</color>
-    <color name="Yellow">#FFFF00</color>
-    <color name="Pink">#EC3051</color>
-    <color name="Orange">#DBDAD8</color>
-    <color name="Red">#FF0000</color>
-    <color name="Blue">#38B2E9</color>
-    <color name="White1">#F5F5F7</color>
-    <color name="Navy">#000080</color>
-    <color name="Black">#000000</color>
-    <color name="activityBackground">#FFFFFF</color>
-    <color name="LightOrange">#E4FCF295</color>
-
-    <color name="Lightgreen">#C2E996</color>
-
+    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorAccent">#D81B60</color>
+    <color name="colorWhite">#F8F7F8</color>
 </resources>
