--- a/app/src/main/res/layout/activity_product_description.xml
+++ b/app/src/main/res/layout/activity_product_description.xml
@@ -1,127 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background_color"
-    tools:context=".activities.ProductDescriptionActivity">
 
-    <LinearLayout
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/iv_cowmilkdetails"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:src="@drawable/cow1" />
+        tools:context=".activities.ProductDescriptionActivity">
 
         <LinearLayout
-            android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/iv_cowmilkdetails"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:background="@drawable/background_color"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="3"
-                android:gravity="center"
-                android:text="Quantity:(in L/Kg)"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="15sp" />
-
-
-            <Button
-                android:id="@+id/btnminus"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/circlebutton"
-                android:text="-"
-                android:textAlignment="center"
-                android:textColor="@color/White"
-                android:textSize="20sp" />
-
-            <EditText
-                android:id="@+id/et_number"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:backgroundTint="@color/White"
-                android:gravity="center"
-                android:hint="0"
-                android:inputType="number"
-                android:maxLength="3"
-                android:textColor="@color/White"
-                android:textColorHint="@color/White"
-                android:textSize="20sp" />
-
-            <Button
-                android:id="@+id/btnplush"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/circlebutton"
-                android:text="+"
-                android:textAlignment="center"
-                android:textColor="@color/White"
-                android:textSize="20sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linearayout2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/cardView"
-            android:layout_margin="20dp"
             android:orientation="vertical">
 
+            <ImageView
+
+                android:id="@+id/itemimage"
+
+                android:scaleType="centerCrop"
+
+                android:layout_width="match_parent"
+                android:layout_height="250dp"/>
+
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                tools:context=".activity.LoginTutorialScreen">
+
+
+
+
+                <androidx.viewpager.widget.ViewPager
+                    android:id="@+id/vpOnboard"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp" />
+
+
+                <com.pixelcan.inkpageindicator.InkPageIndicator
+                    android:visibility="gone"
+                    android:id="@+id/indicator"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="190dp"
+                    android:layout_marginBottom="20dp"
+                    app:ipi_animationDuration="80"
+                    app:ipi_currentPageIndicatorColor="@android:color/white"
+                    app:ipi_dotDiameter="8dp"
+                    app:ipi_dotGap="8dp"
+                    app:ipi_pageIndicatorColor="@color/gray" />
+
+
+            </FrameLayout>
+
+            <LinearLayout
+                android:id="@+id/cardView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+
+
+                android:background="@drawable/background_color"
+                android:orientation="horizontal"
+                android:padding="7dp">
+
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="3"
+                    android:gravity="center"
+                    android:text="Quantity:(in L/Kg)"
+                    android:textAlignment="center"
+                    android:textColor="@color/White"
+                    android:textSize="15sp" />
+
+
+                <Button
+                    android:id="@+id/btnminus"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+
+                    android:background="@drawable/circlebutton"
+                    android:text="-"
+                    android:textAlignment="center"
+                    android:textColor="@color/White"
+                    android:textSize="20sp" />
+
+                <EditText
+                    android:id="@+id/et_number"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/White"
+                    android:gravity="center"
+                    android:hint="0"
+                    android:inputType="number"
+                    android:maxLength="3"
+                    android:textColor="@color/White"
+                    android:textColorHint="@color/White"
+                    android:textSize="20sp" />
+
+                <Button
+                    android:id="@+id/btnplush"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+
+                    android:background="@drawable/circlebutton"
+                    android:text="+"
+                    android:textAlignment="center"
+                    android:textColor="@color/White"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
+                android:textStyle="bold"
+                android:textAllCaps="true"
                 android:text="Product Description"
                 android:textColor="@color/black"
-                android:textSize="30sp" />
+                android:textSize="20sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:padding="15dp"
-                android:text="The milk of cows, goats, or other animals, used as food by humans.
-Any of various potable liquids resembling milk, such as coconut milk or soymilk. A liquid resembling milk in consistency, such as milkweed sap or milk of magnesia."
+                android:layout_margin="10dp"
+                android:elevation="10dp">
 
-                />
+                <TextView
+                    android:id="@+id/decsription"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+
+                    android:text="jnasnznzxznxznxzxzxzxxzxzxxx"
+                    android:textSize="18sp" />
+            </androidx.cardview.widget.CardView>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/relativelayouttext"
+                android:layout_marginLeft="20dp"
+
+                android:layout_marginTop="80dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/logoresourcerectangular"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/btnplushplaceorder"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+
+
+                    android:padding="10dp"
+                    android:text="Place order"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+
+                <View
+                    android:layout_width="2dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="200dp"
+                    android:background="@color/gray" />
+
+
+                <ImageView
+                    android:layout_width="55dp"
+
+                    android:layout_height="50dp"
+                    android:layout_alignParentRight="true"
+
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/ic_arrow_forward_black_24dp"></ImageView>
+            </RelativeLayout>
+
         </LinearLayout>
+    </ScrollView>
 
-        <Button
-            android:id="@+id/btn_enquiry"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/linearayout2"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="center"
-            android:layout_margin="20dp"
-            android:background="@drawable/gradient_button"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="Enquiry Now"
-            android:textColor="@color/White"
-            android:textSize="20sp" />
-
-    </LinearLayout>
-</ScrollView>
+</layout>
